# structured-discretization-energy-based-models

./: .gitignore  pyproject.toml  readme.md  requirements.txt
examples/: acdc.py  cahn_hilliard.py  doubly_nonlinear_parabolic.py  nonlinear_circuit.py
helpers/: energy_based_model.py  errors.py  gauss.py  legendre.py  newton.py  noise.py  other.py  triangle.py
helpers/old/: sparse.py
main/: space_discretization.py  time_discretization.py
plots/: acdc_hamiltonian.py  cahn_hilliard_state.py  convergence.py  energybalance.py
